--- a/junk.Rmd
+++ b/junk.Rmd
@@ -26,6 +26,7 @@ pacman::p_load(
        gtsummary,  #nice tables
        magrittr, # for %<>%
        effectsize,
+       pROC,
        rstatix,
        pwr,   # power calculations
        pander, #to write tables as simple text for cut-and-paste
@@ -37,13 +38,13 @@ pacman::p_load(
 
 
 
-```{r,include=FALSE}
+```{r,include=FALSE,warning=FALSE,message=FALSE}
 
-sim.fun<-function(num.iter = NULL
-                  ,n.cases = NULL
-                  ,n.naiv.control = NULL
-                  ,eff.sz=NULL
-                  ,prp.nondet = NULL,...){
+
+n.cases = 100
+n.naiv.control = 100
+prp.nondet = .4
+
 out1 <- NULL
 out2 <- NULL
 out3 <- NULL
@@ -51,124 +52,46 @@ out4 <- NULL
 
 n.dogs<-n.cases + n.naiv.control
 
-#tru.prev<-(n.cases + (n.naiv.control*prp.nondet))/n.dogs
-
-n.tru.aff<-n.cases + round(n.naiv.control*prp.nondet)
+unlab.pos <- round(n.naiv.control*prp.nondet)
+n.tru.aff<-n.cases +unlab.pos
 
 tru.labels<- c(rep(1,n.tru.aff),rep(0,(n.dogs-n.tru.aff)))
 naive.labels<- c(rep(1,n.cases),rep(0,n.naiv.control))
-
-for (i in 1:num.iter){
 
 
   
 ###sample X
 # this is where the stocastic part comes in
   
-x.tru.affected <- sort(rnorm(n.tru.aff,mean=eff.sz),decreasing=TRUE)
-x.tru.control<-sort(rnorm(n.dogs-n.tru.aff),decreasing=TRUE)
-
-
+# x.tru.affected <- sort(rnorm(n.tru.aff,mean=eff.sz),decreasing=FALSE)
+# x.tru.control<-sort(rnorm(n.dogs-n.tru.aff),decreasing=TRUE)
+####NEED A MIXTURE FOR THE UNLABELED
+x.tru.affected <- runif(n.tru.aff,.5,1)
+x.tru.control<-c(runif(unlab.pos,.5,1),
+                 runif(n.dogs-n.tru.aff-unlab.pos,0,.5))
 ### estimate coeff naive model
+
+
 
 naive.dat<-data.frame(X=c(x.tru.affected,x.tru.control),
                        y=naive.labels)
 
-
+ hist(naive.dat$X)
+ 
+ 
 m.naive<-glm(y~X,data=naive.dat, family = binomial())
 
-naive.coeff<-m.naive$coefficients['X']
+m.naive.pred <-predict(m.naive, type = "link")
+
+as.numeric(roc(tru.labels ~ m.naive.pred)$auc)
 
 
-out1<- c(out1,exp(naive.coeff))
-
+out1 <- c(out1,as.numeric(roc(tru.labels ~ m.naive.pred)$auc))
 out2<- c(out2,sum(tru.labels))
 out3<- c(out3,sum(naive.labels))
  
-} #loop
-
-return(list(n.cases=n.cases,
-            n.naiv.control=n.naiv.control,
-                  prp.nondet=prp.nondet,
-                  eff.sz=eff.sz,
-                  naive.or=out1,
-                  ct.tru.pos=out2,
-                  ct.naiv.pos=out3))
-}
-
 
                     
 ```
 
-
-
-
-
-```{r,results='asis'}
-
-
-sim.table<-function(parmlist){
- 
-  now<-Sys.time()
-  
-foo<-pmap(parmlist,sim.fun)
-
-
-goo <- bind_rows(foo, .id = "column_label")  #unlists and binds rows
-
-
-
-zoo1 <- goo %>% group_by(n.cases,n.naiv.control,prp.nondet,eff.sz) %>% 
-  dplyr::summarise(prp.nondet=mean(prp.nondet)
-                   ,eff.sz=mean(eff.sz)
-                   ,naive.or.mn=mean(naive.or)
-                   ,naive.or.sd=sd(naive.or)
-                   ,ct.tru.pos=mean(ct.tru.pos)
-                   ,ct.naiv.pos=mean(ct.naiv.pos))
-
-print(difftime(Sys.time(),now,units="mins"))
-return(pandoc.table(zoo1 %>% ungroup() %>% arrange(desc(naive.or.mn))
-                    ,style='rmarkdown',digits=3,split.table=Inf))
-
-}
-
-
-oddsratio_to_d(2,log=FALSE) #this coverts OR to cohens so that I make this like SNPs data
-d_to_oddsratio(.1)
-oddsratio_to_d(1.2,log=FALSE)
-
- 
-```
-<!-- https://cran.r-project.org/web/packages/pander/vignettes/pandoc_table.html -->
-
-```{r, results='asis',message=FALSE,warning=FALSE}
-###this checlks different patterns for the same sample size
-
-
-
-# print("sample sizes from the papers: healey (216)")
-#  parmlist<-list(
-# c(rep(200,4)),             #interations; num.iter
-# c(161,161,161,161),   #n.dogs
-# c(55,55,55,55),   #n.dogs
-# c(.01,.05,.1,.2) #non-detection proportion
-# 
-#  )
-# 
-# sim.table(parmlist=parmlist)
-
-
- print("sample sizes from the papers: healey (216)")
- parmlist<-list(
-c(rep(500,3)),             #interations; num.iter
-c(150,50,100),   #n.cases
-c(50,150,100),   #number unlabeled
-c(rep(2,3)),  #eff.sz
-c(rep(0.2,3)) #non-detection proportion
-
- )
-
-sim.table(parmlist=parmlist)
-
-```
 
