--- a/bias_and_power_covariate.Rmd
+++ b/bias_and_power_covariate.Rmd
@@ -50,13 +50,19 @@ out2 <- NULL
 out3 <- NULL
 out4 <- NULL
 
-n.dogs<-n.cases + n.naiv.control
+###numbers of things
+n.dogs<-n.cases + n.naiv.control  #total number of dogs
 
-unlab.pos <- round(n.naiv.control*prp.nondet)
-n.tru.aff<-n.cases +unlab.pos
+
+#control group is made up of the unlabeled pos and the real unaffected
+unlab.pos <- round(n.naiv.control*prp.nondet) #number of positive dogs who are unlabled
+n.tru.unaff <- n.naiv.control-unlab.pos #the number of unaffected
+
+n.tru.aff<-n.cases +unlab.pos # the number of positive dogs in both groups
 
 tru.labels<- c(rep(1,n.tru.aff),rep(0,(n.dogs-n.tru.aff)))
 naive.labels<- c(rep(1,n.cases),rep(0,n.naiv.control))
+
 
 
 for (i in 1:num.iter){
@@ -66,15 +72,10 @@ for (i in 1:num.iter){
 ###sample X
 # this is where the stocastic part comes in
   
-x.tru.affected <- rnorm(n.tru.aff,mean=eff.sz)
+x.tru.affected <- rnorm(n.cases,mean=eff.sz)
 
 x.tru.control<-c(rnorm(unlab.pos,mean=eff.sz),
-                 rnorm(n.dogs-n.tru.aff-unlab.pos))
-####NEED A MIXTURE FOR THE UNLABELED
-# x.tru.affected <- runif(n.tru.aff,.5,1)
-# x.tru.control<-c(runif(unlab.pos,.5,1),
-#                  runif(n.dogs-n.tru.aff-unlab.pos,0,.5))
-### estimate coeff naive model
+                 rnorm(n.tru.unaff))
 
 naive.dat<-data.frame(X=c(x.tru.affected,x.tru.control),
                        y=naive.labels)
@@ -82,15 +83,16 @@ naive.dat<-data.frame(X=c(x.tru.affected,x.tru.control),
 m.naive<-glm(y~X,data=naive.dat, family = binomial())
 
 #naive.coeff<- m.naive$coefficients['X']
-naive.coeff<- summary(m.naive)$coef[2,4]
+naive.p<- summary(m.naive)$coef[2,4] #pvalue
 
 #m.naive.pred <-predict(m.naive, type = "link")
 
-out1<- c(out1,naive.coeff)
+out1<- c(out1,naive.p)
 #out1 <- c(out1,as.numeric(roc(tru.labels ~ m.naive.pred)$auc))
 
 out2<- c(out2,sum(tru.labels))
 out3<- c(out3,sum(naive.labels))
+out4<- c(out4,unlab.pos)
  
 } #loop
 
@@ -98,9 +100,10 @@ return(list(n.cases=n.cases,
             n.naiv.control=n.naiv.control,
                   prp.nondet=prp.nondet,
                   eff.sz=eff.sz,
-                  naive.roc=out1,
+                  naive.p=out1,
                   ct.tru.pos=out2,
-                  ct.naiv.pos=out3))
+                  ct.naiv.pos=out3,
+                  unlabeled.pos=out4))
 }
 
 
@@ -128,13 +131,12 @@ goo <- bind_rows(foo, .id = "column_label")  #unlists and binds rows
 zoo1 <- goo %>% group_by(n.cases,n.naiv.control,prp.nondet,eff.sz) %>% 
   dplyr::summarise(prp.nondet=mean(prp.nondet)
                    ,eff.sz=mean(eff.sz)
-                   ,naive.roc.mn=mean(naive.roc)
-                   ,naive.roc.sd=sd(naive.roc)
-                   ,ct.tru.pos=mean(ct.tru.pos)
-                   ,ct.naiv.pos=mean(ct.naiv.pos))
+                   ,naive.p.mn=mean(naive.p)
+                   ,naive.p.sd=sd(naive.p)
+                   ,unlabeled.pos=mean(unlabeled.pos))
 
 print(difftime(Sys.time(),now,units="mins"))
-return(pandoc.table(zoo1 %>% ungroup() %>% arrange(desc(naive.roc.mn))
+return(pandoc.table(zoo1 %>% ungroup() %>% arrange(naive.p.mn)
                     ,style='rmarkdown',digits=3,split.table=Inf))
 
 }
@@ -153,28 +155,39 @@ oddsratio_to_d(1.2,log=FALSE)
 
 
 
-# print("sample sizes from the papers: healey (216)")
-#  parmlist<-list(
-# c(rep(200,4)),             #interations; num.iter
-# c(161,161,161,161),   #n.dogs
-# c(55,55,55,55),   #n.dogs
-# c(.01,.05,.1,.2) #non-detection proportion
-# 
-#  )
-# 
-# sim.table(parmlist=parmlist)
-
-
- print("sample sizes from the papers: healey (216)")
+ print("sample sizes check")
  parmlist<-list(
-c(rep(5,2)),             #interations; num.iter
-c(150,50),   #n.cases
-c(50,150),   #number unlabeled
-c(rep(.5,2)),  #eff.sz
-c(rep(0.1,2)) #non-detection proportion
+c(rep(7555,6)),             #interations; num.iter
+rep(c(150,50,100),2),   #n.cases
+rep(c(50,150,100),2),   #number unlabeled
+c(rep(.5,6)),  #eff.sz
+c(rep(.1,3),rep(.001,3)) #non-detection proportion
+)
 
+sim.table(parmlist=parmlist)
+
+
+print("sample sizes from the papers: healey (216)")
+ parmlist<-list(
+c(rep(7555,12)),             #interations; num.iter
+rep(c(161,150,108,121,100,95),2),  #cases; n.cases
+rep(c(55,55,108,95,100,95),2),  #controls unlabeled
+c(rep(0.5,12)), #treat effect
+c(rep(0.001,6),rep(.1,6)) #non-detection proportion
  )
+sim.table(parmlist=parmlist)
 
+
+
+
+print("sample sizes from the papers: healey (216),innes, conz , baker")
+ parmlist<-list(
+c(rep(7555,12)),             #interations; num.iter
+rep(c(91,161,191,156),3),  #cases; n.cases
+rep(c(126,55,143,241),3),  #controls unlabeled
+c(rep(0.5,12)), #treat effect
+c(rep(.001,4),rep(.05,4),rep(.1,4)) #non-detection proportion
+ )
 sim.table(parmlist=parmlist)
 
 ```
