--- a/bias_and_power_covariate.Rmd
+++ b/bias_and_power_covariate.Rmd
@@ -89,7 +89,7 @@ out1<- c(out1,naive.p)
 out2<- c(out2,exp(naive.coeff))
 out3<- c(out3,unlab.pos)
 
-temp.out1 <- cohens_d(data=naive.dat,X ~ y,var.equal=FALSE)[1,4,drop=TRUE]
+#temp.out1 <- cohens_d(data=naive.dat,X ~ y,var.equal=FALSE)[1,4,drop=TRUE]
 
 
 temp.out4 <-  pwr::pwr.t2n.test(n1 = n.cases,
@@ -243,13 +243,39 @@ This is a stand alone piece that saves the output table so I can view the result
  
   now<-Sys.time()
 
- parmlist<-list(
-c(rep(5,60)),             #interations; num.iter
-rep(c(150,50,100),20),   #n.cases
-rep(c(50,150,100),20),   #number unlabeled
-c(rep(.5,60)),  #eff.sz
-c(sort(rep(seq(.005, .1,by=0.005),3))) #non-detection proportion
+# parmlist<-list(
+# c(rep(200,60)),             #interations; num.iter
+# rep(c(150,50,100),20),   #n.cases
+# rep(c(50,150,100),20),   #number unlabeled
+# c(rep(.5,60)),  #eff.sz
+# c(sort(rep(seq(.005, .1,by=0.005),3))) #non-detection proportion
+# )
+#  
+ 
+# parmlist<-list(
+# c(rep(7000,10)),             #interations; num.iter
+# rep(c(120,80),5),   #n.cases
+# rep(c(80,120),5),   #number unlabeled
+# c(rep(.5,10)),  #eff.sz
+# c(sort(rep(seq(.005, .1,by=0.02),2))) #non-detection proportion
+# )
+
+parmlist<-list(
+c(rep(5000,11)),             #interations; num.iter
+rep(c(100),11),   #n.cases
+rep(c(100),11),   #number unlabeled
+c(rep(.5,11)),  #eff.sz
+c(sort(rep(seq(0, .1,by=0.01),1))) #non-detection proportion
 )
+
+
+# parmlist<-list(
+# c(rep(5000,8)),             #interations; num.iter
+# rep(c(110,100),4),   #n.cases
+# rep(c(90,100),4),   #number unlabeled
+# c(rep(.5,8)),  #eff.sz
+# c(sort(rep(c(0,.01,.05,.1),2))) #non-detection proportion
+# )
 
 
 big.otpt <- bind_rows(pmap(parmlist,sim.fun), .id = "column_label")  #unlists and binds rows
@@ -265,10 +291,34 @@ smry.otpt <- big.otpt %>% group_by(n.cases,n.naiv.control,prp.nondet,eff.sz) %>%
                    ,unlabeled.pos=mean(unlabeled.pos)
                    ,naive.power=mean(naive.pwr))
 
+
+smry.otpt %>% ungroup() %>% 
+  select(-c(naive.or.mn,naive.p.mn,naive.p.sd, eff.sz)) %>%   arrange(prp.nondet,naive.power)
+
 smry.otpt %>% ungroup() %>% select(-c(naive.or.mn,naive.p.mn,naive.p.sd, eff.sz)) %>%   arrange(naive.power)
 
+pandoc.table(smry.otpt %>% ungroup()%>% select(-c(naive.or.mn,naive.p.mn,naive.p.sd, eff.sz)) %>% arrange(naive.power)
+                    ,style='rmarkdown',digits=3,split.table=Inf)
 
 print(difftime(Sys.time(),now,units="mins"))
 
+
+smry.otpt %>% ungroup() %>% select(n.cases,n.naiv.control,prp.nondet,naive.power) %>%  reframe(prp.nondet=prp.nondet,zzz=naive.power/mean(naive.power[prp.nondet==0]))
+
+```
+
+
+```{r}
+df.plot<-smry.otpt %>% ungroup() %>% select(n.cases,n.naiv.control,prp.nondet,naive.power) %>%  reframe(prp.nondet=prp.nondet,zzz=naive.power/mean(naive.power[prp.nondet==0])) %>% 
+  mutate(prp.nondet=prp.nondet*100, zzz=zzz*100)
+
+tiff("powerloss.tiff", units="in", width=6, height=4, res=600)
+
+ggplot(data=df.plot, aes(x=prp.nondet, zzz)) +
+  geom_line(color="red")+
+  geom_point()+xlab("Percent of non-detected positives in the control group")+
+  ylab("Relative power")+
+  ggtitle("Power loss from positive cases in the negative control group")
+dev.off()
 ```
 
