--- a/bias_and_power_covariate.Rmd
+++ b/bias_and_power_covariate.Rmd
@@ -317,7 +317,7 @@ tiff("powerloss.tiff", units="in", width=6, height=4, res=600)
 ggplot(data=df.plot, aes(x=prp.nondet, zzz)) +
   geom_line(color="red")+
   geom_point()+xlab("Percent of non-detected positives in the control group")+
-  ylab("Relative power")+
+  ylab("Relative power (%)")+
   ggtitle("Power loss from positive cases in the negative control group")
 dev.off()
 ```
