--- a/bias_and_power_covariate.Rmd
+++ b/bias_and_power_covariate.Rmd
@@ -17,104 +17,104 @@ But they are random sampling a wildlife area. They randomly pick occupied areas 
 I have retrospective data there. I use a mixture of normals because I have sample sizes I need to investigate
 
 ```{r,include=FALSE}
-#install.packages("pacman")
+# install.packages("pacman")
 pacman::p_load(
-       data.table, # to group and clean data
-       tidyverse,  # allows use of pipe (%>%) function in this chapter
-       janitor,     #for clean_names and tabyl
-       broom,   #tidy output, use tidy(xxx)
-       gtsummary,  #nice tables
-       magrittr, # for %<>%
-       effectsize,
-       pROC,
-       rstatix,
-       pwr,   # power calculations
-       pander, #to write tables as simple text for cut-and-paste
-       knitr,
-        kableExtra
-   ) 
+  data.table, # to group and clean data
+  tidyverse, # allows use of pipe (%>%) function in this chapter
+  janitor, # for clean_names and tabyl
+  broom, # tidy output, use tidy(xxx)
+  gtsummary, # nice tables
+  magrittr, # for %<>%
+  effectsize,
+  pROC,
+  rstatix,
+  pwr, # power calculations
+  pander, # to write tables as simple text for cut-and-paste
+  knitr,
+  kableExtra
+)
 ```
 
 
 
 
 ```{r,include=FALSE}
+sim.fun <- function(
+    num.iter = NULL,
+    n.cases = NULL,
+    n.naiv.control = NULL,
+    eff.sz = NULL,
+    prp.nondet = NULL, ...) {
+  out1 <- NULL
+  out2 <- NULL
+  out3 <- NULL
+  out4 <- NULL
 
-sim.fun<-function(num.iter = NULL
-                  ,n.cases = NULL
-                  ,n.naiv.control = NULL
-                  ,eff.sz=NULL
-                  ,prp.nondet = NULL,...){
-out1 <- NULL
-out2 <- NULL
-out3 <- NULL
-out4 <- NULL
-
-###numbers of things
-n.dogs<-n.cases + n.naiv.control  #total number of dogs
-
-
-#control group is made up of the unlabeled pos and the real unaffected
-unlab.pos <- round(n.naiv.control*prp.nondet) #number of positive dogs who are unlabled
-n.tru.unaff <- n.naiv.control-unlab.pos #the number of unaffected
-
-n.tru.aff<-n.cases +unlab.pos # the number of positive dogs in both groups
-
-tru.labels<- c(rep(1,n.tru.aff),rep(0,(n.dogs-n.tru.aff)))
-naive.labels<- c(rep(1,n.cases),rep(0,n.naiv.control))
+  ### numbers of things
+  n.dogs <- n.cases + n.naiv.control # total number of dogs
 
 
+  # control group is made up of the unlabeled pos and the real unaffected
+  unlab.pos <- round(n.naiv.control * prp.nondet) # number of positive dogs who are unlabled
+  n.tru.unaff <- n.naiv.control - unlab.pos # the number of unaffected
 
-for (i in 1:num.iter){
+  n.tru.aff <- n.cases + unlab.pos # the number of positive dogs in both groups
 
-
-  
-###sample X
-# this is where the stocastic part comes in
-  
-x.tru.affected <- rnorm(n.cases,mean=eff.sz)
-
-x.tru.control<-c(rnorm(unlab.pos,mean=eff.sz),
-                 rnorm(n.tru.unaff))
-
-naive.dat<-data.frame(X=c(x.tru.affected,x.tru.control),
-                       y=naive.labels)
-
-m.naive<-glm(y~X,data=naive.dat, family = binomial())
-
-naive.coeff<- m.naive$coefficients['X']
-naive.p<- summary(m.naive)$coef[2,4] #pvalue
-
-out1<- c(out1,naive.p)
-out2<- c(out2,exp(naive.coeff))
-out3<- c(out3,unlab.pos)
-
-#temp.out1 <- cohens_d(data=naive.dat,X ~ y,var.equal=FALSE)[1,4,drop=TRUE]
+  tru.labels <- c(rep(1, n.tru.aff), rep(0, (n.dogs - n.tru.aff)))
+  naive.labels <- c(rep(1, n.cases), rep(0, n.naiv.control))
 
 
-temp.out4 <-  pwr::pwr.t2n.test(n1 = n.cases,
-                  n2 = n.naiv.control,
-                sig.level = 0.05,
-                alternative = "two.sided",
-                power = NULL,
-                d = temp.out1)$power
-out4 <- c(out4,temp.out4)
 
- 
-} #loop
+  for (i in 1:num.iter) {
+    ### sample X
+    # this is where the stocastic part comes in
 
-return(list(n.cases=n.cases,
-            n.naiv.control=n.naiv.control,
-                  prp.nondet=prp.nondet,
-                  eff.sz=eff.sz,
-                  naive.p=out1,
-                  naive.or=out2,
-                  unlabeled.pos=out3,
-                  naive.pwr=out4))
+    x.tru.affected <- rnorm(n.cases, mean = eff.sz)
+
+    x.tru.control <- c(
+      rnorm(unlab.pos, mean = eff.sz),
+      rnorm(n.tru.unaff)
+    )
+
+    naive.dat <- data.frame(
+      X = c(x.tru.affected, x.tru.control),
+      y = naive.labels
+    )
+
+    m.naive <- glm(y ~ X, data = naive.dat, family = binomial())
+
+    naive.coeff <- m.naive$coefficients["X"]
+    naive.p <- summary(m.naive)$coef[2, 4] # pvalue
+
+    out1 <- c(out1, naive.p)
+    out2 <- c(out2, exp(naive.coeff))
+    out3 <- c(out3, unlab.pos)
+
+    # temp.out1 <- cohens_d(data=naive.dat,X ~ y,var.equal=FALSE)[1,4,drop=TRUE]
+
+
+    temp.out4 <- pwr::pwr.t2n.test(
+      n1 = n.cases,
+      n2 = n.naiv.control,
+      sig.level = 0.05,
+      alternative = "two.sided",
+      power = NULL,
+      d = temp.out1
+    )$power
+    out4 <- c(out4, temp.out4)
+  } # loop
+
+  return(list(
+    n.cases = n.cases,
+    n.naiv.control = n.naiv.control,
+    prp.nondet = prp.nondet,
+    eff.sz = eff.sz,
+    naive.p = out1,
+    naive.or = out2,
+    unlabeled.pos = out3,
+    naive.pwr = out4
+  ))
 }
-
-
-                    
 ```
 
 
@@ -122,45 +122,43 @@ return(list(n.cases=n.cases,
 
 
 ```{r,results='asis'}
+sim.table <- function(parmlist) {
+  now <- Sys.time()
+
+  foo <- pmap(parmlist, sim.fun)
 
 
-sim.table<-function(parmlist){
- 
-  now<-Sys.time()
-  
-foo<-pmap(parmlist,sim.fun)
-
-
-goo <- bind_rows(foo, .id = "column_label")  #unlists and binds rows
+  goo <- bind_rows(foo, .id = "column_label") # unlists and binds rows
 
 
 
-zoo1 <- goo %>% group_by(n.cases,n.naiv.control,prp.nondet,eff.sz) %>% 
-  dplyr::summarise(prp.nondet=mean(prp.nondet)
-                   ,eff.sz=mean(eff.sz)
-                   ,naive.or.mn=mean(naive.or)
-                   ,naive.p.mn=mean(naive.p)
-                   ,naive.p.sd=sd(naive.p)
-                   ,unlabeled.pos=mean(unlabeled.pos)
-                   ,naive.power=mean(naive.pwr))
+  zoo1 <- goo %>%
+    group_by(n.cases, n.naiv.control, prp.nondet, eff.sz) %>%
+    dplyr::summarise(
+      prp.nondet = mean(prp.nondet),
+      eff.sz = mean(eff.sz),
+      naive.or.mn = mean(naive.or),
+      naive.p.mn = mean(naive.p),
+      naive.p.sd = sd(naive.p),
+      unlabeled.pos = mean(unlabeled.pos),
+      naive.power = mean(naive.pwr)
+    )
 
-print(difftime(Sys.time(),now,units="mins"))
-return(pandoc.table(zoo1 %>% ungroup() %>% arrange(prp.nondet)
-                    ,style='rmarkdown',digits=3,split.table=Inf))
-
+  print(difftime(Sys.time(), now, units = "mins"))
+  return(pandoc.table(zoo1 %>% ungroup() %>% arrange(prp.nondet),
+    style = "rmarkdown", digits = 3, split.table = Inf
+  ))
 }
 
 
-oddsratio_to_d(2,log=FALSE) #this coverts OR to cohens so that I make this like SNPs data
+oddsratio_to_d(2, log = FALSE) # this coverts OR to cohens so that I make this like SNPs data
 d_to_oddsratio(.1)
-oddsratio_to_d(1.2,log=FALSE)
-
- 
+oddsratio_to_d(1.2, log = FALSE)
 ```
 <!-- https://cran.r-project.org/web/packages/pander/vignettes/pandoc_table.html -->
 
 ```{r, results='asis',message=FALSE,warning=FALSE}
-###this checlks different patterns for the same sample size
+### this checlks different patterns for the same sample size
 
 
 
@@ -172,7 +170,7 @@ oddsratio_to_d(1.2,log=FALSE)
 # c(rep(.5,6)),  #eff.sz
 # c(rep(.1,3),rep(.001,3)) #non-detection proportion
 # )
-# 
+#
 # sim.table(parmlist=parmlist)
 
 
@@ -185,10 +183,10 @@ oddsratio_to_d(1.2,log=FALSE)
 # c(rep(0.001,7),rep(.05,7),rep(.1,7)) #non-detection proportion
 #  )
 # sim.table(parmlist=parmlist)
-# 
-# 
-# 
-# 
+#
+#
+#
+#
 # print("sample sizes from the papers: conz , ")
 #  parmlist<-list(
 # c(rep(7555,3)),             #interations; num.iter
@@ -198,8 +196,8 @@ oddsratio_to_d(1.2,log=FALSE)
 # c(.001,.05,.1) #non-detection proportion
 #  )
 # sim.table(parmlist=parmlist)
-# 
-# 
+#
+#
 # print("sample sizes from the papers: healey (216),innes, conz , baker")
 #  parmlist<-list(
 # c(rep(7555,12)),             #interations; num.iter
@@ -209,9 +207,9 @@ oddsratio_to_d(1.2,log=FALSE)
 # c(rep(.001,4),rep(.05,4),rep(.1,4)) #non-detection proportion
 #  )
 # sim.table(parmlist=parmlist)
-# 
-# 
-# 
+#
+#
+#
 # print("sample sizes check")
 #  parmlist<-list(
 # c(rep(755,3)),             #interations; num.iter
@@ -221,7 +219,7 @@ oddsratio_to_d(1.2,log=FALSE)
 # c(rep(.1,3)) #non-detection proportion
 # )
 
-#sim.table(parmlist=parmlist)
+# sim.table(parmlist=parmlist)
 
 # print("sample sizes check")
 #  parmlist<-list(
@@ -231,17 +229,14 @@ oddsratio_to_d(1.2,log=FALSE)
 # c(rep(.5,60)),  #eff.sz
 # c(sort(rep(seq(.005, .1,by=0.005),3))) #non-detection proportion
 # )
-# 
+#
 # sim.table(parmlist=parmlist)
-
-
 ```
 
 
 This is a stand alone piece that saves the output table so I can view the results different ways.
 ```{r}
- 
-  now<-Sys.time()
+now <- Sys.time()
 
 # parmlist<-list(
 # c(rep(200,60)),             #interations; num.iter
@@ -250,8 +245,8 @@ This is a stand alone piece that saves the output table so I can view the result
 # c(rep(.5,60)),  #eff.sz
 # c(sort(rep(seq(.005, .1,by=0.005),3))) #non-detection proportion
 # )
-#  
- 
+#
+
 # parmlist<-list(
 # c(rep(7000,10)),             #interations; num.iter
 # rep(c(120,80),5),   #n.cases
@@ -260,12 +255,12 @@ This is a stand alone piece that saves the output table so I can view the result
 # c(sort(rep(seq(.005, .1,by=0.02),2))) #non-detection proportion
 # )
 
-parmlist<-list(
-c(rep(5000,11)),             #interations; num.iter
-rep(c(100),11),   #n.cases
-rep(c(100),11),   #number unlabeled
-c(rep(.5,11)),  #eff.sz
-c(sort(rep(seq(0, .1,by=0.01),1))) #non-detection proportion
+parmlist <- list(
+  c(rep(5000, 11)), # interations; num.iter
+  rep(c(100), 11), # n.cases
+  rep(c(100), 11), # number unlabeled
+  c(rep(.5, 11)), # eff.sz
+  c(sort(rep(seq(0, .1, by = 0.01), 1))) # non-detection proportion
 )
 
 
@@ -278,46 +273,61 @@ c(sort(rep(seq(0, .1,by=0.01),1))) #non-detection proportion
 # )
 
 
-big.otpt <- bind_rows(pmap(parmlist,sim.fun), .id = "column_label")  #unlists and binds rows
+big.otpt <- bind_rows(pmap(parmlist, sim.fun), .id = "column_label") # unlists and binds rows
 
 
 
-smry.otpt <- big.otpt %>% group_by(n.cases,n.naiv.control,prp.nondet,eff.sz) %>% 
-  dplyr::summarise(prp.nondet=mean(prp.nondet)
-                   ,eff.sz=mean(eff.sz)
-                   ,naive.or.mn=mean(naive.or)
-                   ,naive.p.mn=mean(naive.p)
-                   ,naive.p.sd=sd(naive.p)
-                   ,unlabeled.pos=mean(unlabeled.pos)
-                   ,naive.power=mean(naive.pwr))
+smry.otpt <- big.otpt %>%
+  group_by(n.cases, n.naiv.control, prp.nondet, eff.sz) %>%
+  dplyr::summarise(
+    prp.nondet = mean(prp.nondet),
+    eff.sz = mean(eff.sz),
+    naive.or.mn = mean(naive.or),
+    naive.p.mn = mean(naive.p),
+    naive.p.sd = sd(naive.p),
+    unlabeled.pos = mean(unlabeled.pos),
+    naive.power = mean(naive.pwr)
+  )
 
 
-smry.otpt %>% ungroup() %>% 
-  select(-c(naive.or.mn,naive.p.mn,naive.p.sd, eff.sz)) %>%   arrange(prp.nondet,naive.power)
+smry.otpt %>%
+  ungroup() %>%
+  select(-c(naive.or.mn, naive.p.mn, naive.p.sd, eff.sz)) %>%
+  arrange(prp.nondet, naive.power)
 
-smry.otpt %>% ungroup() %>% select(-c(naive.or.mn,naive.p.mn,naive.p.sd, eff.sz)) %>%   arrange(naive.power)
+smry.otpt %>%
+  ungroup() %>%
+  select(-c(naive.or.mn, naive.p.mn, naive.p.sd, eff.sz)) %>%
+  arrange(naive.power)
 
-pandoc.table(smry.otpt %>% ungroup()%>% select(-c(naive.or.mn,naive.p.mn,naive.p.sd, eff.sz)) %>% arrange(naive.power)
-                    ,style='rmarkdown',digits=3,split.table=Inf)
+pandoc.table(smry.otpt %>% ungroup() %>% select(-c(naive.or.mn, naive.p.mn, naive.p.sd, eff.sz)) %>% arrange(naive.power),
+  style = "rmarkdown", digits = 3, split.table = Inf
+)
 
-print(difftime(Sys.time(),now,units="mins"))
+print(difftime(Sys.time(), now, units = "mins"))
 
 
-smry.otpt %>% ungroup() %>% select(n.cases,n.naiv.control,prp.nondet,naive.power) %>%  reframe(prp.nondet=prp.nondet,zzz=naive.power/mean(naive.power[prp.nondet==0]))
-
+smry.otpt %>%
+  ungroup() %>%
+  select(n.cases, n.naiv.control, prp.nondet, naive.power) %>%
+  reframe(prp.nondet = prp.nondet, zzz = naive.power / mean(naive.power[prp.nondet == 0]))
 ```
 
 
 ```{r}
-df.plot<-smry.otpt %>% ungroup() %>% select(n.cases,n.naiv.control,prp.nondet,naive.power) %>%  reframe(prp.nondet=prp.nondet,zzz=naive.power/mean(naive.power[prp.nondet==0])) %>% 
-  mutate(prp.nondet=prp.nondet*100, zzz=zzz*100)
+df.plot <- smry.otpt %>%
+  ungroup() %>%
+  select(n.cases, n.naiv.control, prp.nondet, naive.power) %>%
+  reframe(prp.nondet = prp.nondet, zzz = naive.power / mean(naive.power[prp.nondet == 0])) %>%
+  mutate(prp.nondet = prp.nondet * 100, zzz = zzz * 100)
 
-tiff("powerloss.tiff", units="in", width=6, height=4, res=600)
+tiff("powerloss.tiff", units = "in", width = 6, height = 4, res = 600)
 
-ggplot(data=df.plot, aes(x=prp.nondet, zzz)) +
-  geom_line(color="red")+
-  geom_point()+xlab("Percent of non-detected positives in the control group")+
-  ylab("Relative power (%)")+
+ggplot(data = df.plot, aes(x = prp.nondet, zzz)) +
+  geom_line(color = "red") +
+  geom_point() +
+  xlab("Percent of non-detected positives in the control group") +
+  ylab("Relative power (%)") +
   ggtitle("Power loss from positive cases in the negative control group")
 dev.off()
 ```
